<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="terms_of_use">I agree to the terms of use</string>
    <string name="set_up_safeword">Set Up Emergency Safe Word</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Microphone">TODO</string>
    <string name="Say_safe">Please Say Safe Word</string>
    <string name="Repeat_safe">Repeat Safe Word</string>
    <string name="welcome">Welcome!</string>
    <string name="KentVSE">Kent State\'\s Virtual Security Escort for Students</string>
    <string name="Setup">Setup</string>
    <string name="Settings">Settings</string>
    <string name="app_name">VSE</string>
    <string name="VSE">VSE</string>
    <string name="Contact_Info">Emergency Contact Set Up</string>
    <string name="Contact_1">Contact 1</string>
    <string name="Contact_2">Contact 2</string>
    <string name="Contact_3">Contact 3</string>
    <string name="name">Name</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Submit">Submit</string>
    <string name="Terms">Welcome!</string>
    <string name="VSEtext" tools:ignore="StringEscaping">Kent State\'s Virtual Security Escort for Students</string>
    <string name="checkBox1">I agree to Terms of Service</string>
    <string name="checkBox2">Always Allow Microphone Use</string>
    <string name="Emergency">Emergency Message Preview</string>
    <string name="Message">This is an emergency text from this approximate location. You are receiving this because you have been made an emergency contact for them.</string>
    <string name="Confirm">Confirm</string>
    <string name="Listening">If you are in danger, click below</string>
    <string name="MySettings">Settings</string>
    <string name="web">https://maps.google.com/maps?q=</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="press">press</string>
    <string name="hint">hint</string>
    <string name="Next">Next</string>


</resources>
