<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/appicon_foreground"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="7dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginLeft="143dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="180dp"
        android:layout_marginRight="180dp"
        android:layout_marginBottom="53dp"
        android:text="@string/Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="305dp"
        android:layout_height="268dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.699" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="48dp"
        android:text="@string/Message"
        app:layout_constraintBottom_toTopOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Emergency"
        android:textColor="#EE0707"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />